--- a/kooplexhub/hub/templates/static/common.css
+++ b/kooplexhub/hub/templates/static/common.css
@@ -1,3 +1,8 @@
+body {
+  height: 100%; 
+  overflow-y: hidden;
+}
+
 .form-control:focus {
   border-color: gray;
   box-shadow: inset 0 1px 1px gray, 0 0 8px gray;
@@ -12,5 +17,57 @@
 }
 .mytab.active {
   font-weight: bolder;
+}
+
+.navbar-expand-md .navbar-nav .nav-link {
+  padding-right: 1ex;
+}
+
+.container-fluid {
+  margin-left: initial;
+  margin-right: initial;
+  padding-left: initial;
+  padding-right: initial;
+}
+
+.text-white:hover {
+  font-weight: bold;
+}
+
+@media all and (min-width: 1265px) {
+  .menuname{
+    display: none; 
+  }
+
+  .message {
+      width: 300px;
+  }
+
+  .container-two {
+    display: grid;
+    grid-template-columns: repeat(14, 2fr);
+  }
+
+  .navigation-menu {
+    grid-column: span 6;
+  }
+
+  .main-content {
+    grid-column: span 8;
+  }
+
+  .pageend{
+    position:absolute;
+    margin-top: 10px;
+  }
+}
+
+.blink {
+  animation: blinker 10s linear infinite;
+}
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
 
