--- a/kooplexhub/hub/templates/index_unauthorized.html
+++ b/kooplexhub/hub/templates/index_unauthorized.html
@@ -47,8 +47,9 @@
       <img src="/static/gitea.png"  class="logos" alt="gitea">
       <img src="/static/seafile.png"  class="logos" alt="seafile">
       <img src="/static/slurm.png" class="logos" alt="slurm">
-      <img src="/static/singularity.png" class="logos" alt="singularity">
+      <!--img src="/static/singularity.png" class="logos" alt="singularity"-->
     </div>
+    <img src="/static/Kooplex-frontpage.png">
   </div>
 {% endblock %}
 </div>
