--- a/kooplexhub/container/templates/attachment_new.html
+++ b/kooplexhub/container/templates/attachment_new.html
@@ -3,7 +3,7 @@
 {% load extras %}
 
 {% block realcontent %}
-<div class="container mt-2">
+<div class="container" style="overflow-x:hidden;">
   <form id="attachment_new" class="form-horizontal was-validated card bg-light border-secondary shadow p-3" action="{% url 'container:new_attachment' %}" method="post">
     {% csrf_token %}
     {% title "Create a new attachment" %}
